<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">


    <ImageView
        android:id="@+id/iv_image_detail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"
        android:scaleType="fitXY"
        android:src="@drawable/alvine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_image_detail"
        android:layout_marginTop="@dimen/margin_10"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_nama_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin5"
            android:layout_marginTop="@dimen/margin5"
            android:gravity="center"
            android:text="@string/nama"
            android:textSize="@dimen/text_18"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_spesifikasi_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin5"
            android:gravity="center"
            android:text="@string/spesifikasi" />

        <TextView
            android:id="@+id/tv_harga_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin5"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/harga"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_10"
            android:gravity="center"
            android:text="@string/close" />
    </LinearLayout>

</RelativeLayout>