<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/bgColor"
    android:layout_marginStart="@dimen/margin_10"
    android:layout_marginTop="@dimen/margin_10"
    android:layout_marginEnd="@dimen/margin_10"
    app:cardCornerRadius="@dimen/margin_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_230"
            android:scaleType="fitXY"
            android:src="@drawable/alvine" />

        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin5"
            android:layout_marginTop="@dimen/margin5"
            android:text="@string/nama"
            android:textSize="@dimen/text_18"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin5">

            <TextView
                android:id="@+id/tv_spesifikasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin5"
                android:layout_weight="1"
                android:lines="3"
                android:text="@string/spesifikasi" />

            <TextView
                android:id="@+id/tv_harga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/harga"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>